; ModuleID = '/home/carl/AnghaBench/git/ewah/extr_bitmap.c_bitmap_free.c'
source_filename = "/home/carl/AnghaBench/git/ewah/extr_bitmap.c_bitmap_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitmap = type { %struct.bitmap* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bitmap_free(%struct.bitmap* %0) #0 {
  %2 = alloca %struct.bitmap*, align 8
  store %struct.bitmap* %0, %struct.bitmap** %2, align 8
  %3 = load %struct.bitmap*, %struct.bitmap** %2, align 8
  %4 = icmp eq %struct.bitmap* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %13

6:                                                ; preds = %1
  %7 = load %struct.bitmap*, %struct.bitmap** %2, align 8
  %8 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %7, i32 0, i32 0
  %9 = load %struct.bitmap*, %struct.bitmap** %8, align 8
  %10 = call i32 @free(%struct.bitmap* %9)
  %11 = load %struct.bitmap*, %struct.bitmap** %2, align 8
  %12 = call i32 @free(%struct.bitmap* %11)
  br label %13

13:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @free(%struct.bitmap*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
